Codegen test refactoring